# whatsell

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  available_models.json  celerybeat-schedule  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_initial_tables.py  b2c3d4e5f6a7_fix_embedding_dimension.py  c3d4e5f6a7b8_add_knowledge_base_tables.py
app/: config.py  dependencies.py  main.py
app/api/: __init__.py  admin.py  analytics.py  chat.py  customers.py  documents.py  health.py  kb_chat.py  orders.py  products.py  webhooks.py
app/db/: mongodb.py  postgres.py  redis.py
app/middleware/: error_handler.py  request_logging.py
app/models/: mongodb.py  postgres.py
app/schemas/: chat.py  customer.py  order.py  product.py
app/services/: analytics_service.py  cart_service.py  chat_service.py  customer_service.py  kb_service.py  order_service.py  payment_service.py  product_service.py  vector_service.py  whatsapp_service.py
app/tasks/: celery.py  documents.py  embeddings.py  followups.py
frontend/: Dockerfile  Dockerfile.dev  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/kb/: page.tsx
frontend/src/app/logs/: page.tsx
frontend/src/components/: DocumentList.tsx  DocumentUpload.tsx  MessageItem.tsx  ProductCard.tsx  Sidebar.tsx  SourceCard.tsx
scripts/: inspect_kaggle.py  load_kaggle_products.py  postgres-init.sql  seed.py
tests/: test_api.py
(+15 files in other folders)
