[project]
name = "whatsell"
version = "0.1.0"
description = "E-Commerce AI Chatbot - Product queries, recommendations, order capture, and automated follow-ups"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
